clusters/kubenuc/apps/net-mon/manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: net-mon
  labels:
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.33
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.33
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
